kubernetes/9-Deployment/ingress/kuber-svc-app-latest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber
  labels:
    app: kuber
spec:
  replicas: 2
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: http-server
  template:
    metadata:
      labels:
        app: http-server
    spec:
      containers:
      - name: kuber-app
        image: bokovets/kuber
        ports:
        - containerPort: 8000

---
kind: Service
apiVersion: v1
metadata:
  name:  kuber-service
spec:
  selector:
    app:  http-server
  ports:
  - protocol: TCP
    port:  80
    targetPort:  8000
  type: ClusterIP
